--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "aws-serverless-wordpress",
   "version": "0.1.0",
+  "author": {
+    "name": "MikletNg",
+    "email": "mike@miklet.pro",
+    "url": "https://miklet.pro"
+  },
+  "license": "Apache-2.0",
   "bin": {
     "aws-serverless-wordpress": "bin/aws-serverless-wordpress.js"
   },
