Updated the docker file for WordPress and the WordPress configuration in Nginx.

--- a/lib/images/nginx/wordpress.conf.template
+++ b/lib/images/nginx/wordpress.conf.template
@@ -1,11 +1,9 @@
-upstream memcached-servers {
-    server ${MEMCACHED_HOST}:11211;
-}
-
 server {
     listen   80; ## listen for ipv4; this line is default and implied
     listen   [::]:80 default ipv6only=on; ## listen for ipv6
     server_name ${SERVER_NAME};
+
+    include /var/www/html/nginx.conf
 
     keepalive_timeout  5 5;
     proxy_buffering    off;
@@ -21,25 +19,12 @@ server {
     index index.php index.html index.htm;
 
     location / {
-            try_files $uri $uri/ @memcached;
-            proxy_http_version 1.1;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-            expires 24h;
-            log_not_found off;
-    }
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-            root /var/www/html;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    location ~ (\.php) {
+    location ~ .php$ {
         try_files $uri =404;
         fastcgi_index                           index.php;
         fastcgi_connect_timeout                 10;
@@ -75,47 +60,5 @@ server {
         fastcgi_param   REDIRECT_STATUS         200;
 
         fastcgi_pass localhost:9000;
-    }
-
-    # try to get result from memcached
-    location @memcached {
-        default_type text/html;
-        set $memcached_key data-$scheme://$host$request_uri;
-        set $memcached_request 1;
-
-        # exceptions
-        # avoid cache serve of POST requests
-        if ($request_method = POST ) {
-            set $memcached_request 0;
-        }
-
-        # avoid cache serve of wp-admin-like pages, starting with "wp-"
-        if ( $uri ~ "/wp-" ) {
-            set $memcached_request 0;
-        }
-
-        # avoid cache serve of any URL with query strings
-        if ( $args ) {
-            set $memcached_request 0;
-        }
-
-        if ($http_cookie ~* "comment_author_|wordpressuser_|wp-postpass_|wordpress_logged_in_" ) {
-            set $memcached_request 0;
-        }
-
-        if ( $memcached_request = 1) {
-            add_header X-Cache-Engine "Memcache via nginx";
-            memcached_pass memcached-servers;
-            error_page 404 = @rewrites;
-        }
-
-        if ( $memcached_request = 0) {
-            rewrite ^ /index.php last;
-        }
-    }
-
-    location @rewrites {
-        add_header X-Cache-Engine "No cache";
-        rewrite ^ /index.php last;
     }
 }
