--- a/lib/images/nginx/wordpress.conf.template
+++ b/lib/images/nginx/wordpress.conf.template
@@ -3,7 +3,7 @@ server {
     listen   [::]:80 default ipv6only=on; ## listen for ipv6
     server_name ${SERVER_NAME};
 
-    include /var/www/html/nginx.conf
+    include /var/www/html/nginx.conf;
 
     keepalive_timeout  5 5;
     proxy_buffering    off;
