--- a/lib/images/wordpress/Dockerfile
+++ b/lib/images/wordpress/Dockerfile
@@ -1,4 +1,4 @@
-FROM wordpress:5.5.1-php7.4-fpm-alpine
+FROM wordpress:5.5.1-php7.3-fpm-alpine
 
 COPY uploads.ini /usr/local/etc/php/conf.d/uploads.ini
 
@@ -44,7 +44,6 @@ RUN set -ex; \
 	; \
 	pecl install \
 		apcu \
-		apc \
 		memcached \
 	; \
 	docker-php-ext-enable \
@@ -61,6 +60,11 @@ RUN set -ex; \
 	)"; \
 	apk add --virtual .wordpress-phpexts-rundeps $runDeps; \
 	apk del .build-deps
+
+RUN wget https://elasticache-downloads.s3.amazonaws.com/ClusterClient/PHP-7.3/latest-64bit &&\
+    tar -zxvf latest-64bit &&\
+    cp amazon-elasticache-cluster-client.so /usr/local/lib/php/extensions/ &&\
+    echo 'extension=amazon-elasticache-cluster-client.so' >> $PHP_INI_DIR/php.ini
 
 WORKDIR /var/www/html
 
