Added X-Ray side-car container daemon in task definition. Updated WordPress docker file to installing X-Ray require package or library. Switch from test stack for formal stack for testing production deployment. Updated the logging bucket policy for VPC flow log and load balancer access log. Updated the construction of ECS cluster.

--- a/lib/images/wordpress/Dockerfile
+++ b/lib/images/wordpress/Dockerfile
@@ -45,10 +45,12 @@ RUN set -ex; \
 	pecl install \
 		apcu \
 		memcached \
+		xhprof \
 	; \
 	docker-php-ext-enable \
 		apcu \
 		memcached \
+		xhprof \
 	 \
 	&& chown www-data:www-data /var/www /var/www/html; \
 	\
