Removed the test directory. Updated the WordPress conf in Nginx, fixed the error for including unknow conf. Updated the WordPress docker file, the ElastiCache PHP extension temporary disabled. Updated the stack props, now required the Elastic Load Balancer account ID. Updated the stack: - Fixed HTTP listener will only redirect to HTTPS with 80 port - Added log driver and port mapping for XRay side-car container - Removed the placement strategies in the ECS service - Enabled the Web ACL and Cloudfront distributions - Enabled the backup plan for EFS and RDS - Enable the record set in public hosted zone

--- a/lib/images/wordpress/Dockerfile
+++ b/lib/images/wordpress/Dockerfile
@@ -63,10 +63,10 @@ RUN set -ex; \
 	apk add --virtual .wordpress-phpexts-rundeps $runDeps; \
 	apk del .build-deps
 
-RUN wget https://elasticache-downloads.s3.amazonaws.com/ClusterClient/PHP-7.3/latest-64bit &&\
-    tar -zxvf latest-64bit &&\
-    cp amazon-elasticache-cluster-client.so /usr/local/lib/php/extensions/ &&\
-    echo 'extension=amazon-elasticache-cluster-client.so' >> $PHP_INI_DIR/php.ini
+#RUN wget https://elasticache-downloads.s3.amazonaws.com/ClusterClient/PHP-7.3/latest-64bit &&\
+#    tar -zxvf latest-64bit &&\
+#    cp amazon-elasticache-cluster-client.so /usr/local/lib/php/extensions/ &&\
+#    echo 'extension=amazon-elasticache-cluster-client.so' >> $PHP_INI_DIR/php.ini
 
 WORKDIR /var/www/html
 
