--- a/package.json
+++ b/package.json
@@ -17,48 +17,44 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.65.0",
+    "@aws-cdk/assert": "1.66.0",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
-    "aws-cdk": "1.65.0",
+    "aws-cdk": "1.66.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-applicationautoscaling": "1.65.0",
-    "@aws-cdk/aws-backup": "1.65.0",
-    "@aws-cdk/aws-certificatemanager": "1.65.0",
-    "@aws-cdk/aws-cloud9": "1.65.0",
-    "@aws-cdk/aws-cloudfront": "1.65.0",
-    "@aws-cdk/aws-cloudwatch": "1.65.0",
-    "@aws-cdk/aws-codebuild": "1.65.0",
-    "@aws-cdk/aws-codedeploy": "1.65.0",
-    "@aws-cdk/aws-codepipeline": "1.65.0",
-    "@aws-cdk/aws-codepipeline-actions": "1.65.0",
-    "@aws-cdk/aws-config": "1.65.0",
-    "@aws-cdk/aws-ec2": "1.65.0",
-    "@aws-cdk/aws-ecr": "1.65.0",
-    "@aws-cdk/aws-ecr-assets": "1.65.0",
-    "@aws-cdk/aws-ecs": "1.65.0",
-    "@aws-cdk/aws-efs": "1.65.0",
-    "@aws-cdk/aws-elasticache": "1.65.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "1.65.0",
-    "@aws-cdk/aws-events-targets": "1.65.0",
-    "@aws-cdk/aws-iam": "1.65.0",
-    "@aws-cdk/aws-kms": "1.65.0",
-    "@aws-cdk/aws-logs": "1.65.0",
-    "@aws-cdk/aws-rds": "1.65.0",
-    "@aws-cdk/aws-route53": "1.65.0",
-    "@aws-cdk/aws-route53-patterns": "1.65.0",
-    "@aws-cdk/aws-route53-targets": "1.65.0",
-    "@aws-cdk/aws-s3": "1.65.0",
-    "@aws-cdk/aws-s3-assets": "1.65.0",
-    "@aws-cdk/aws-secretsmanager": "1.65.0",
-    "@aws-cdk/aws-wafv2": "1.65.0",
-    "@aws-cdk/core": "1.65.0",
-    "@aws-cdk/region-info": "1.65.0",
+    "@aws-cdk/aws-applicationautoscaling": "1.66.0",
+    "@aws-cdk/aws-backup": "1.66.0",
+    "@aws-cdk/aws-certificatemanager": "1.66.0",
+    "@aws-cdk/aws-cloudfront": "1.66.0",
+    "@aws-cdk/aws-cloudwatch": "1.66.0",
+    "@aws-cdk/aws-config": "1.66.0",
+    "@aws-cdk/aws-ec2": "1.66.0",
+    "@aws-cdk/aws-ecr": "1.66.0",
+    "@aws-cdk/aws-ecr-assets": "1.66.0",
+    "@aws-cdk/aws-ecs": "1.66.0",
+    "@aws-cdk/aws-efs": "1.66.0",
+    "@aws-cdk/aws-elasticache": "1.66.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "1.66.0",
+    "@aws-cdk/aws-elasticsearch": "1.66.0",
+    "@aws-cdk/aws-events-targets": "1.66.0",
+    "@aws-cdk/aws-iam": "1.66.0",
+    "@aws-cdk/aws-kms": "1.66.0",
+    "@aws-cdk/aws-logs": "1.66.0",
+    "@aws-cdk/aws-rds": "1.66.0",
+    "@aws-cdk/aws-route53": "1.66.0",
+    "@aws-cdk/aws-route53-targets": "1.66.0",
+    "@aws-cdk/aws-s3": "1.66.0",
+    "@aws-cdk/aws-secretsmanager": "1.66.0",
+    "@aws-cdk/aws-sns": "1.66.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.66.0",
+    "@aws-cdk/aws-wafv2": "1.66.0",
+    "@aws-cdk/core": "1.66.0",
+    "@aws-cdk/region-info": "1.66.0",
     "@types/lodash": "^4.14.157",
     "@types/moment": "^2.13.0",
     "source-map-support": "^0.5.16"
